# secure-file-encryption

./: CMakeLists.txt  readme.md
docs/: references.md
src/: CryptoEngine.cpp  CryptoEngine.h  FileHandler.cpp  FileHandler.h  TpmManager.cpp  TpmManager.h  Types.h  crypto_engine.cpp  crypto_engine.h  file_handler.cpp  file_handler.h  main.cpp  tpm_manager.cpp  tpm_manager.h
